logs/prod_v4_6282497.err
Traceback (most recent call last):
  File "/home/fallah/scripts/ESMB/experiments/control_run.py", line 20, in <module>
    from chronos_esm import main  # noqa: E402
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/fallah/scripts/ESMB/chronos_esm/main.py", line 17, in <module>
    from chronos_esm.coupler import state as coupled_state
  File "/home/fallah/scripts/ESMB/chronos_esm/coupler/state.py", line 10, in <module>
    from chronos_esm.ocean.veros_driver import OceanState  # noqa: F401
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/fallah/scripts/ESMB/chronos_esm/ocean/veros_driver.py", line 563
    """Initialize a resting ocean state."""
                                        ^
SyntaxError: unterminated triple-quoted string literal (detected at line 573)
